# comote

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: desktop-release.yml
.wiki/: 01-架构总览.md  02-核心模块.md  03-频道与集成层.md  04-Codex连接器与模型后端.md  05-Tauri壳与本地安全边界.md  06-端到端数据流.md  07-打包与发布.md  08-扩展指南.md  Home.md
public/: app.js  index.html  qr-code.js  styles.css
scripts/: build-macos-app.mjs  build-sidecar.mjs  check-wechat-channel.mjs  collect-tauri-artifacts.mjs  create-mac-dmg.mjs  generate-desktop-assets.mjs  icon-utils.mjs  install-prod-deps.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: get_keep_daemon_alive.toml  get_show_dock_icon.toml  set_keep_daemon_alive.toml  set_show_dock_icon.toml
src-tauri/src/: main.rs
src/core/: authorization.js  channel.js  commands.js  event-log.js  outbound-queue.js  (+6 more)
test/: authorization.test.js  commands-extended.test.js  commands.test.js  connectors.test.js  desktop-packaging.test.js  event-log.test.js  feishu-adapter.test.js  feishu-cards.test.js  feishu-driver.test.js  feishu-runtime.test.js  hardening.test.js  outbound-queue.test.js  persistence-discovery.test.js  projects-sessions.test.js  qr-code.test.js  reliability.test.js  return-path.test.js  server-runtime.test.js  server-state.test.js  server.test.js  setup-ui.test.js  sleep-guard.test.js  thread-expand-ui.test.js  transcript.test.js  version-check.test.js  wechat-adapter.test.js  wechat-ilink-driver.test.js  wechat-runtime.test.js
(+15 files in other folders)
